add a Get /rackmount that return all the information needed to create a rackmount compute node
